@@ -1,6 +1,9 @@
 qgis (2.7.0) UNRELEASED; urgency=medium
 
   * New development version 2.7 after branch of 2.6
+  * run tests in en_US.UTF-8 locale
+  * add build dependency to python-qscintilla2 for tests
+  * merge some downstream debian changes
 
  -- Jürgen E. Fischer <jef@norbit.de>  Fri, 31 Oct 2014 13:00:45 +0100
 
